--- a/experiments/screens/package.json
+++ b/experiments/screens/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@google/genai": "^1.19.0",
     "dotenv": "^17.2.2",
+    "lit": "^3.3.1",
     "vite": "^6.3.6"
   }
 }
