--- a/experiments/screens/package.json
+++ b/experiments/screens/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "generate": "tsx src/generate.ts",
     "dev": "vite dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx test/adventure-game.test.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@google/genai": "^1.19.0",
     "dotenv": "^17.2.2",
+    "lit": "^3.3.1",
     "vite": "^6.3.6"
   }
 }
