--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -106,7 +106,9 @@
   },
   "dependencies": {
     "@breadboard-ai/embedded-board-server": "0.2.1",
+    "@breadboard-ai/loader": "^0.0.3",
     "@breadboard-ai/types": "0.9.0",
+    "@breadboard-ai/utils": "^0.1.0",
     "@google-labs/breadboard": "^0.36.0"
   }
 }
