--- a/packages/a2/tsconfig.json
+++ b/packages/a2/tsconfig.json
@@ -24,8 +24,7 @@
   },
   "include": [
     "src/**/*.ts",
-    "bgl/src/**/*.ts",
-    "bgl/src/**/*.js",
+    "src/**/*.js",
     "bgl/**/*.bgl.json",
     "src/environment.d.ts"
   ],
