--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -67,6 +67,7 @@
     "@breadboard-ai/loader": "^0.0.3",
     "@breadboard-ai/types": "0.9.0",
     "@breadboard-ai/utils": "^0.1.0",
-    "@google-labs/breadboard": "^0.36.0"
+    "@google-labs/breadboard": "^0.36.0",
+    "marked": "^16.3.0"
   }
 }
