--- a/packages/gulf/tsconfig.json
+++ b/packages/gulf/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/0.7/*.ts"],
+  "include": ["src/tests/**/*.ts", "src/index.ts", "src/0.7/**/*.ts"],
   "extends": "@google-labs/tsconfig/base.json"
 }
